--- a/VB/PrintAppointmentsInInterval/app.config
+++ b/VB/PrintAppointmentsInInterval/app.config
@@ -1,10 +1,8 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="PrintAppointmentsInInterval.Properties.Settings.CarsDBConnectionString"
-            connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\CarsDB.mdb;Persist Security Info=True"
-            providerName="System.Data.OleDb" />
+        <add name="Settings.CarsDBConnectionString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\CarsDB.mdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
     </connectionStrings>
 </configuration>
