--- a/VB/PrintAppointmentsInInterval/app.config
+++ b/VB/PrintAppointmentsInInterval/app.config
@@ -3,7 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="PrintAppointmentsInInterval.Properties.Settings.CarsDBConnectionString"
+        <add name="Settings.CarsDBConnectionString"
             connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\CarsDB.mdb;Persist Security Info=True"
             providerName="System.Data.OleDb" />
     </connectionStrings>
